SubBt/force-app/main/default/objects/SOV_Continuation__c/SOV_Continuation__c.object-meta.xml
<CustomObject>
    <description>This is the equivalent of the G703 form.</description>
    <label>Continuation Sheet - G702</label>
    <nameField>
        <label>Continuation  Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Continuation Sheet - G702</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>