SubBt/force-app/main/default/objects/SOV_Continuation__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>