SubBt/force-app/main/default/objects/SOV_Continuation__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <inlineHelpText>This is the last day of the billing period.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>