SubBt/force-app/main/default/objects/SOV_Continuation__c/fields/Architect_Project_No__c.field-meta.xml
<CustomField>
    <fullName>Architect_Project_No__c</fullName>
    <label>Architect Project No:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>