SubBt/force-app/main/default/objects/SOV_Continuation__c/fields/Period_To__c.field-meta.xml
<CustomField>
    <fullName>Period_To__c</fullName>
    <inlineHelpText>Last day of the billing period.</inlineHelpText>
    <label>Period To</label>
    <type>Date</type>
</CustomField>