SubBt/force-app/main/default/objects/SOV_Continuation__c/fields/SOV_Payment_Application__c.field-meta.xml
<CustomField>
    <fullName>SOV_Payment_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Application</label>
    <referenceTo>SOV_Payment_Application__c</referenceTo>
    <relationshipName>SOV_Continuation_Sheet</relationshipName>
    <type>Lookup</type>
</CustomField>